fix(protected/views/backup): :bug: Fix backup list table overflow on mobile
Fix #275

--- a/styles/diary.css
+++ b/styles/diary.css
@@ -12,6 +12,10 @@
 	padding: 0 !important;
 }
 
+.grid-view .item-wrapper {
+	overflow-x: auto;
+}
+
 .table {
 	margin: 0;
 }
